adding an normalize .css file , and linking pages to eachother
.normalize.css file renders the whole project to open smoothly in all surfers
. adding a pic.svg to the nav bar

--- a/src/page.css
+++ b/src/page.css
@@ -5,9 +5,19 @@
   background: url("../media/bg-img.svg");
   background-repeat: no-repeat;
   background-size: auto;
+  font-family: 'Poppins', sans-serif;
   
 }
 
 ul {
     text-align: left;
+}
+
+h1{
+    font-size: 72px;
+
+}
+.about {
+    font-size:52px;
+    font-family:monospace;
 }
